argocd/src/gateway-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-gateway-http
  namespace: default
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: default
  hostnames:
  - "argocd.ryanguild.localhost"
  - "argocd.ryanguild.local"
  - "argocd.ryanguild.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: argocd-gateway-tls
  namespace: default
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: default
  hostnames:
  - "argocd.ryanguild.localhost"
  - "argocd.ryanguild.xyz"
  rules:
  - backendRefs:
    - name: argocd-server
      port: 443
      weight: 1
