argocd/src/http-route.yaml
apiVersion: networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argocd
spec:
  parentRefs:
    - group: networking.k8s.io
      kind: Gateway
      name: localhost-gateway
      namespace: nginx
  hostnames:
    - localhost
  rules:
    - backendRefs:
        - kind: Service
          name: argo-cd-argocd-server
          namespace: argocd
          port: 443
          tls:
            mode: Passthrough
